[package]
name = "Welcome"
version = "0.1.0"
edition = "2021"

[dependencies]
#artisan_middleware = {path = "/usr/local/lib/artisan_lib"}
artisan_middleware = "4.1.3"
colored = "2.1.0"
dusa_collection_utils = "3.0.8"
gethostname = "0.5.0"
lsb_release = "0.1.0"
simple_pretty = "0.1.0"
tokio = "1.42.0"
